add compatibility to jquery v3

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "dimd4/yii2-redactor",
+  "name": "susilolab/yii2-redactor",
   "description": "Extension redactor for Yii2.",
   "keywords": [
     "yii2",
